--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pas d'idée de repas ? découvrez Ifresh ! vous trouverez votre une liste de repas savoureux, de saison et facile à réaliser ! générez votre semaine dès maintenant.">
     <link rel="stylesheet" href="style.css">
-    <script src="app.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -21,6 +21,7 @@
         </div>
         <img src="menu.png" alt="menu_burger" class="menu-burger">
     </nav>
+
 <header>
     <div id="message"><p>Pour votre santé manger 5 fruits et légumes par jours !</p></div>
     <div id="img"><img src="Plat_cuisiné_repas.jpg" alt="table avec plat cuisiné "></div>
@@ -30,8 +31,7 @@
 <main>
     <h1>Votre Semaine Culinaire</h1>
 <div class="scrool">
-   <div class="card"></div>
-   <div class="card"></div>
+   <div class="card"><img  id= "c" src="" alt=""></div>
    <div class="card"></div>
    <div class="card"></div>
    <div class="card"></div>
@@ -50,19 +50,19 @@
             </div>
 
             <div id="text">
-                <div id="titre"><img src="controle_qualité.png" alt=""><h3>La Qualité & le prix</h3></div>
-                <p>toutes nos recette sont élaboré afin de convenir a tout les 
+                <div id="titre"><img src="controle_qualité.png" alt="controle_qualité"><h3>La Qualité & le prix</h3></div>
+                <p>Toutes nos recettes sont élaborées afin de convenir à tous les 
                     budgets sans jamais oublier la qualité.</p>
 
-                <div id="titre"><img src="environnement.png" alt=""><h3>Des repas en accord avec l'environnement</h3></div>
-                <p>tout nos repas sont élaborer selon les saisonnalités, 
-                    et dans une optique de "slow consommation</p>
+                <div id="titre"><img src="environnement.png" alt="environnement"><h3>Des repas en accord avec l'environnement</h3></div>
+                <p> Toutes nos recettes sont élaborées selon les saisonnalités, 
+                    et dans une optique de "slow consommation"</p>
 
                 <div id="titre"><img src="temps.png" alt="horloge"><h3>Votre temps nous est précieux </h3></div>
                 <p>inutile de passer des heures en cuisine pour
                     préparer de bon repas ! 
-                    Nos chefs ont eu la lourde tache d'élaborer vos recettes
-                    avec un contrainte de temps </p>    
+                    Nos chefs ont eu la lourde tâche d'élaborer vos recettes
+                    avec une contrainte de temps </p>    
             </div>
         </div>
     </article>
@@ -73,11 +73,11 @@
 
         <div id="com">
             
-         <div id="p"><p>" Les menus sont clair, Simple et les repas toujours délicieux " </p>Fabrice M</div>
+         <div id="p"><p>" Les menus sont clair, Simple et les <strong>repas</strong> toujours délicieux "</p></div>
 
-         <div id="p"><p>" Fidèle elon nos goûts sont délicieux, c'est vraiment pratique pour gérer nos repas de la semaine " </p>Marc G</div>  
+         <div id="p"><p>" <strong>Recette délicieuse</strong>, c'est vraiment pratique pour gérer nos repas de la semaine "</p></div>  
 
-         <div id="p"><p>" Souvent pris par mon travail, je n'ai pas toujours le temps de cuisiner.. avec Ifresh c'est simple ! " </p>Josè M</div>  
+         <div id="p"><p>" Souvent pris par mon travail, je n'ai pas toujours le <strong>temps de cuisiner..</strong> avec Ifresh c'est simple ! "</p></div>  
 
         </div>                 
     </div>
@@ -85,12 +85,16 @@
 </main>
 
 <footer id="footer">
-    <h2>en savoir plus ?</h2>
+
+ <h2>en savoir plus ?</h2>
+
  <div id="link">
     <a href="#">Qui sommes nous ?</a>
     <a href="#">Nos Engagement</a>
     <a href="#">Credit</a>
  </div>
+
 </footer>
+
 </body>
 </html>
